# tvtv2xmltv

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  example_usage.py  podman-compose.yml  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  run_server.sh  run_server_mock.sh  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
src/: main.py
src/tvtv2xmltv/: __init__.py  config.py  converter.py  mock_client.py  server.py  tvtv_client.py  xmltv_generator.py
tests/: test_config.py  test_converter.py  test_server.py  test_tvtv_client.py  test_xmltv_generator.py
tests/fixtures/: README.md  luUSA-AZ02490-X_channels.json  luUSA-AZ02490-X_grid.json  luUSA-OTA85142_channels.json  luUSA-OTA85142_grid.json
